--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
     <title>login page1</title>
   </head>
   <body>
-    <h1>somehow bored log in below:</h1>
-    <div class="login-field">
-      <div class="names">
-        <input type="text" id="fname" placeholder="enter full name" required>
-      </div></div>
+ hello there gladly you are streaming<br> meanwhile say hi to me<
   </body>
 </html>
