--- a/home.html
+++ b/home.html
@@ -322,15 +322,15 @@
             </div>
             <div class="topbar-item dropdown">
                 <img src="profile-avatar.jpg" alt="User Avatar" class="avatar">
-                <span class="user-name">John Doe</span>
+                <span class="user-name"></span>
                 <div class="dropdown-content">
                     <a href="#" class="dropdown-item" onclick="showProfileModal()">Profile Details</a>
                     <a href="#" class="dropdown-item" onclick="showEditProfileModal()">Edit Profile</a>
-                    <div class="dropdown-item account-balance">Balance: $1,250.00</div>
+                    <div class="dropdown-item account-balance">Balance: $0.00</div>
                 </div>
             </div>
             <div class="topbar-item account-balance">
-                $1,250.00
+                $0.00
             </div>
         </div>
     </div>
@@ -388,7 +388,7 @@
             </div>
             <div class="form-group">
                 <label>Account Balance:</label>
-                <p id="profileBalance" class="account-balance" style="display: inline-block;">$1,250.00</p>
+                <p id="profileBalance" class="account-balance" style="display: inline-block;">$0.00</p>
             </div>
         </div>
     </div>
@@ -400,15 +400,15 @@
             <h2>Edit Profile</h2>
             <div class="form-group">
                 <label for="editName">Name:</label>
-                <input type="text" id="editName" value="John Doe">
+                <input type="text" id="editName" value="">
             </div>
             <div class="form-group">
                 <label for="editEmail">Email:</label>
-                <input type="email" id="editEmail" value="john.doe@example.com">
+                <input type="email" id="editEmail" value="youremail@example.com">
             </div>
             <div class="form-group">
                 <label for="editDob">Date of Birth:</label>
-                <input type="date" id="editDob" value="1990-05-15">
+                <input type="date" id="editDob" value="">
             </div>
             <div class="form-group">
                 <label for="editAvatar">Profile Image:</label>
@@ -451,7 +451,7 @@
                 </div>
                 <div class="form-group">
                     <label>Current Balance:</label>
-                    <p>$1,250.00</p>
+                    <p>$0.00</p>
                 </div>
                 <div class="form-group">
                     <label>Last Transaction:</label>
@@ -459,7 +459,7 @@
                 </div>
                 <div class="form-group">
                     <label>Monthly Spending:</label>
-                    <p>$750.00</p>
+                    <p>$0.00</p>
                 </div>
             </div>
         </div>
